reverse-proxy/code-server/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: code-server-service # needs to match Service name
subsets:
  - addresses:
      - ip: 192.168.0.30
    ports:
      - name: http
        port: 8080
        protocol: TCP
