reverse-proxy/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server-service # needs to match endpoint name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
